<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DLA tree</string>
    <string name="action_settings">Settings</string>
    <string name="action_save_image">Save image</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>
    <string name="palette_shift">Palette shift</string>
    <string name="palette_coeff">Palette coefficient</string>
    <string name="iterations_number">Iterations number</string>
    <string name="ok">OK</string>
    <string name="file_is_here">File is here</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="dots">Dots</string>
    <string name="default_palette_shift">20</string>
    <string name="default_palette_coeff">20</string>
    <string name="default_iterations">20</string>


</resources>
